@@ -160,11 +160,15 @@ The following options may be passed to CMake:
         Path where Inno Setpup Compiler should place the catata setup exe.
         Default: z:\
         
-    -DCANTATA_MINGW_LIBS=<path>\mingwm10.dll;<path>libgcc_s_dw2-1.dll
+    -DCANTATA_MINGW_LIBS=<path>/mingwm10.dll;<path>/libgcc_s_dw2-1.dll
         Extra MinGW libraries required for install stage.
         Qt4 builds only - not required for Qt5.
         Default: <empty>
-        
+
+    -DCANTATA_SSL_LIBS=<path>/libeay32.dll;<path>/ssleay32.dll
+        SSL libraries
+        Default: <empty>
+
     -DCANTATA_OXYGEN_DIR=<path>
         Path to Oxygen icons, required for install stage.
         Default: <empty>
