@@ -46,6 +46,7 @@
 32. Fix display of rating in tag dialog when only 1 file is being edited.
 33. Fix fetching of ratings in table style playqueue.
 34. Don't convert -ve track, disc, or years to unsigned - set to 0.
+35. Bundle openSSL libs with windows builds.
 
 1.5.1
 -----
